2014-04-25  Miyoung Shin  <myid.shin@samsung.com>

        Web process is crashed during dispatching touchEvent created by JS.
        https://bugs.webkit.org/show_bug.cgi?id=113225

        Reviewed by Benjamin Poulain.

        TouchEvent created by JS should have the necessary attributes
        of touches, targetTouches and changedTouches.
        It should be verified weather there are touchLists before dispatching touch event.

        * fast/events/touch/create-touch-event-without-touchList-expected.txt: Added.
        * fast/events/touch/create-touch-event-without-touchList.html: Added.

2014-07-08  Jeffrey Pfau  <jpfau@apple.com>

        Fix flaky loading tests
        https://bugs.webkit.org/show_bug.cgi?id=133696

        Reviewed by Ryosuke Niwa.

        * platform/wk2/TestExpectations: Unskip no-longer failing tests

2014-06-11  Jeffrey Pfau  <jpfau@apple.com>

        Fix flaky beforeload tests
        https://bugs.webkit.org/show_bug.cgi?id=133685

        Reviewed by David Kilzer.

        * platform/wk2/TestExpectations: Unskip tests that are no longer flaky

2014-05-28  Jon Honeycutt  <jhoneycutt@apple.com>

        Roll r168668 back in.

        <https://bugs.webkit.org/show_bug.cgi?id=132621>

        Reviewed by Brent Fulgham.

        * compositing/plugins/composited-plugin.html:
        * compositing/plugins/no-backing-store.html:
        * fast/dom/beforeload/flash-before-load.html:
        * fast/events/beforeload-assertion-expected.txt: Added.
        * fast/events/beforeload-assertion.html: Added.
        * fast/events/beforeload-iframe-crash-expected.txt: Added.
        * fast/events/beforeload-iframe-crash.html: Added.
        * fast/events/beforeload-input-time-crash-expected.txt: Added.
        * fast/events/beforeload-input-time-crash.html: Added.
        * http/tests/security/contentSecurityPolicy/1.1/plugintypes-notype-data.html:
        * http/tests/security/contentSecurityPolicy/1.1/plugintypes-nourl-blocked.html: