@@ -1,0 +1,24 @@
+<!DOCTYPE html>
+<html contenteditable>
+<head>
+<script>
+if (window.testRunner)
+    testRunner.dumpAsText();
+
+function test() {
+    document.execCommand("selectAll", false, null);
+    document.execCommand("createlink", true, "http://www.example.com");
+    document.execCommand("removeFormat", false, null);
+    document.write("<p>Test for bug <a href=\"https://bugs.webkit.org/show_bug.cgi?id=137961\">Crash in WebCore::Node::getFlag</a></p>");
+    document.write("<p>This test passes if it doesn't crash.</p>");
+}
+</script>
+<style>
+* {
+    display:table-row-group;
+}
+</style>
+</head>
+<body onload='test();' hidden>
+</body>
+</html>
