@@ -267,6 +267,9 @@ void ApplyStyleCommand::applyBlockStyle(EditingStyle *style)
 #else
     Node* scope = highestEditableRoot(visibleStart.deepEquivalent());
 #endif
+    if (!scope)
+        return;
+
     RefPtr<Range> startRange = Range::create(document(), firstPositionInNode(scope), visibleStart.deepEquivalent().parentAnchoredEquivalent());
     RefPtr<Range> endRange = Range::create(document(), firstPositionInNode(scope), visibleEnd.deepEquivalent().parentAnchoredEquivalent());
     int startIndex = TextIterator::rangeLength(startRange.get(), true);
