@@ -1,3 +1,13 @@
+2014-11-10  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Crash in WebCore::Node::getFlag
+        https://bugs.webkit.org/show_bug.cgi?id=137961
+
+        Reviewed by Antti Koivisto.
+
+        * editing/ApplyStyleCommand.cpp:
+        (WebCore::ApplyStyleCommand::applyBlockStyle): Null pointer check added.
+
 2014-11-11  David Kilzer  <ddkilzer@apple.com>
 
         Protect Document in ProcessingInstruction::setXSLStyleSheet()
